scopes: list -> set many fixes